# vksLab

./: .gitignore  CLAUDE.md  Makefile  README.md  setup-venv.sh
.claude/: settings.local.json
.github/workflows/: ansible.yml  docs.yml  python.yml
ansible/: ansible.cfg  run.sh
ansible/collections/: requirements.yml
ansible/docs/: bringup-polling-spec.md
ansible/inventory/: hosts-gateway.yml  hosts.yml
ansible/playbooks/: phase0_operator.yml  phase1_foundation.yml  phase1b_discover_macs.yml  phase2_configure_host.yml  phase2_discover_macs.yml  phase2_esxi.yml  phase2_identity_host.yml  phase3_configure_host.yml  phase3_esxi.yml  phase3_identity_host.yml  phase3_vcf_mgmt.yml  phase4_vcf_mgmt.yml  phase4_vcf_workload.yml  phase4b_identity.yml  phase5_nsx.yml  phase5_platform.yml  phase5_vcf_platform.yml  phase6_nsx.yml  phase6_vcf_workload.yml  phase6_vks.yml  phase7_identity.yml  phase7_vcf_workload_nsx.yml  site.yml  (+3 more)
configs/: vcf-bringup.json  veos-startup.cfg
docs/: conceptual-design.md  deliver.md  design.md  logical-design.md  operate.md  physical-design.md
esxi-prep/: pyproject.toml  ruff.toml
esxi-prep/configs/: lab.example.yaml
esxi-prep/src/vkslab_esxi/: __init__.py  _logging.py  cli.py  config.py  exceptions.py  host.py  inventory.py  secrets.py  ssh.py
esxi-prep/tests/: conftest.py  test_cli.py  test_config.py  test_host.py  test_inventory.py  test_secrets.py  test_ssh.py
esxi-prep/tests/fixtures/: storage_device_list.txt
nixos/: Pulumi.yaml  __main__.py  flake.nix  requirements.txt
scripts/: fix-grd.sh  phase4_workload_domain.py
(+239 files in other folders)
