[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vkslab-esxi"
version = "0.1.0"
description = "ESXi host preparation tool for VKS Lab"
requires-python = ">=3.12"
dependencies = [
    "paramiko>=3.4",
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.7",
    "hvac>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.3",
]

[project.scripts]
vkslab-esxi = "vkslab_esxi.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/vkslab_esxi"]
